<resources>
    <string name="app_name">Android-RUPizzeria</string>

    <string name="select_topping_title">Select Toppings</string>

    <string name="confirm_order_title">Confirm Order</string>

    <string name="max_topping_warning">Can\'t add more than 7 toppings</string>

    <string name="continue_option">Continue</string>

    <string name="cancel_option">Cancel</string>

    <string name="place_order_option">Place Order</string>

    <string name="order_placed_notif">Order Placed</string>

    <string name="order_cancelled_notif">Order Cancelled</string>

    <string name="price_label">Subtotal Pizza Price: $</string>

    <integer name="max_toppings">7</integer>

    <integer name = "total_toppings">13</integer>

    <string name="order_pizza_nav">Order Pizza</string>

    <string name="store_orders_nav">Store Orders</string>

    <string name="cart_nav">Cart</string>

    <string name="type">Type</string>

    <string name="crust">Crust</string>

    <string name="toppings">Toppings</string>

    <string name="order_number">Order Number</string>

    <string name="order_total_wtax">Order total (w/ tax) $</string>

    <string name="cancel_order_button">CANCEL ORDER</string>

    <string name="place_order_button">PLACE ORDER</string>

    <string name="remove_order_button">REMOVE ORDER</string>

    <string name="clear_order_button">CLEAR ORDER</string>

    <string name="default_price">0.00</string>

    <string name="small">small</string>

    <string name="medium">medium</string>

    <string name="large">large</string>

    <string name="default_order_number">0</string>

    <string name="order_total">Order Total: </string>

    <string name="subtotal">Subtotal: </string>

    <string name="sales_tax">Sales Tax: </string>

    <string-array name="pizza_types">
        <item>Chicago Build Your Own</item>
        <item>Chicago Deluxe</item>
        <item>Chicago BBQ Chicken</item>
        <item>Chicago Meatzza</item>
        <item>NY Build Your Own</item>
        <item>NY Deluxe</item>
        <item>NY BBQ Chicken</item>
        <item>NY Meatzza</item>
    </string-array>

    <string-array name="pizza_crust">
        <item>Crust: Pan</item>
        <item>Crust: Deep Dish</item>
        <item>Crust: Pan</item>
        <item>Crust: Stuffed</item>
        <item>Crust: Hand tossed</item>
        <item>Crust: Brooklyn</item>
        <item>Crust: Thin</item>
        <item>Crust: Hand tossed</item>
    </string-array>

    <string-array name="pizza_toppings">
        <item>Toppings: Choose Up To 7</item>
        <item>Toppings: Sausage, Pepperoni, Green Pepper, Onion, Mushroom</item>
        <item>Toppings: BBQ Chicken, Green Pepper, Provolone, Cheddar</item>
        <item>Toppings: Sausage, Pepperoni, Beef, Ham</item>
        <item>Toppings: Choose Up To 7</item>
        <item>Toppings: Sausage, Pepperoni, Green Pepper, Onion, Mushroom</item>
        <item>Toppings: BBQ Chicken, Green Pepper, Provolone, Cheddar</item>
        <item>Toppings: Sausage, Pepperoni, Beef, Ham</item>
    </string-array>

    <string-array name="toppings">
        <item>Sausage</item>
        <item>Pepperoni</item>
        <item>Green Pepper</item>
        <item>Onion</item>
        <item>Mushroom</item>
        <item>BBQ Chicken</item>
        <item>Green Pepper</item>
        <item>Provolone</item>
        <item>Cheddar</item>
        <item>Beef</item>
        <item>Ham</item>
        <item>Bacon</item>
        <item>Pineapple</item>
    </string-array>

    <string name="empty_order">Empty Order!</string>
    <string name="remove_selected_items">Removed Selected Items</string>

    <string name="money_format_string">$%.2f</string>

    <string name="pizza_subtotal_string">Pizza Subtotal: $%.2f</string>
    <string name="current_pizza_subtotal">Current Pizza Subtotal: $%.2f</string>
    <string name="subtotal_pizza_price_formatter">%s %.2f</string>

    <integer name="position_chicago_buildyourown">0</integer>
    <integer name="position_ny_buildyourown">4</integer>
    
    <string name="warning_exit">Are you sure you want to exit?</string>
    <string name="warning_exit_yes">Yes</string>
    <string name="warning_exit_no">No</string>
    
    <string name="no_orders_to_remove">There are no orders to remove!</string>
    
    <string name="order_removed">Order %d Removed</string>

    <string name="no_order_selected" >No Order Selected!</string>

    <string name="nil_price">$0.00</string>

</resources>